--- a/index.html
+++ b/index.html
@@ -3,13 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esercizio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Corso Web Developer - Epicode school</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <nav>
-        <img src="/Esercizio/images/logo.png" alt="logo">
+        <img src="/Esercizio/images/logo.png" alt="logo" height="50px" width="100px">
     </nav>
+<header background="Esercizio/images/banner.jpg">
+    <h1>
+        Corso Web Developer  
+    </h1>
+    <p>
+        Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze
+    </p>
+    <button>PARTIAMO!</button>
+    </header>
+<main>
+    <div>
+        <h2>Tutti ti cercheranno</h2>
+        <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più</p>
+        <h2>Lavora dove vuoi</h2>
+        <p>Lavora da casa, in riva al mare o in montagna</p>
+    </div>
+<img class="circolare" src="Esercizio/images/notebook.jpg">
+<div>
+    <h2>Scegli il tuo ruolo</h2>
+    <p>Potrai scegliere se essere Azienda, Freelance o Startup.</p>
+    <h2>Lavoro in libertà</h2>
+    <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali</p>
+</div>
+<div id="CEO">
+    <h1>Epicode garantisce</h1>
+    <p>"3 mesi intensivi di corso che cambieranno radicalmente la tua vita".</p>
+    <h2>Mario Rossi</h2>
+    <p>CEO, Epicode</p>
+</div>
+<div>
+    <img src="Esercizio/images/foto1.jpg" alt="Computer" height="150px" width="250px">
+    <h2>Il tuo PC</h2>
+    <p>Se vuoi diventare developer è l’unico strumento di cui hai bisogno.</p>
+    </div>
+    <div>
+        <img src="Esercizio/images/foto2.jpg" alt="pc" height="150px" width="250px">
+        <h2>Impara ora</h2>
+        <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
+    </div>
+    <div>
+        <img src="Esercizio/images/foto3.jpg" alt="Studio" height="150px" width="250px">
+        <h2>Lavora subito</h2>
+        <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
+    </div>
+</main>
+<footer>
+    <h1>Contattaci</h1>
+    <a href="tel:+390115456789">
+         +39.0113.546789
+         <i class="fa-solid fa-square-phone"></i>
+         <div>
+        </a id="Gmail">
+        <a href="info@epicode.school">info@epicode.school</a>
+    </div>
+    <div>
+        <p>Via Appia 1 - 000100 Roma (RM)</p>
+    </div>
+    </footer>
     
 </body>
 </html>
